Minu projekti plaan v0.1

--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
 </head>
 <body>
     <h1 >Kõrvaklapide pood</h1>
-    <h2>domeeninimi</h2>
-   <p>Veebisite on vaja, et kõrvaklappe müüa
-</p>
+    <h2>domeeninimi:S strap</h2>
+  
     <p>Domeeni nimi oleks strap.ee</p>
-    <p>Nimi on strap.“strap” on kõrvkalpi tähtis osa
+    <p>Nimi on strap.“strap” on kõrvkalpi tähtis osa ning see sobib hästi nimeks.
         </p>
-    <p>Sihtrühm on põhiliselt muusika fännid, aga ka mängurid.
+        <p>majutusteenuse valik- Veebimajutus.ee</p> 
+        <p>domeeni hind on 7.25 eur aastas</p>
+        <p>Miks on veebisaiti vaja? Veebisite on vaja, et kõrvaklappe müüa
+        </p>
+    <p>Milline on veebisaidi sihtrühm? Sihtrühm on põhiliselt muusika fännid, aga ka mängurid.
     </p>
-    <p>Plaanin kasutada wordpress, webflow</p>
-    <p>Veebisite hakkab kõrvaklappide müümisest raha teenima.</p>
-    <p>Ma ise pean haldama website, sõltub kui edukas website on, kui ei ole populaarne, ei ole rohkem inimesid peale minu vaja.</p>
+    <p>Kuidas veebisait hakkab raha teenima? Veebisite hakkab kõrvaklappide müümisest raha teenima.</p>
+    <p> Milliseid tehnoloogiaid kasutad veebisaidi loomiseks? Plaanin kasutada wordpress, webflow</p>
+    <p>Kes hakkab veebisaiti haldama, uuendama, sinna sisu tootma? Kui mahukas protsess see on?
+        Ma ise pean haldama website, sõltub kui edukas website on, kui ei ole populaarne, ei ole rohkem inimesid peale minu vaja.</p>
+       <p>Mida teed omalt poolt, et veebisait otsingutulemustes võimalikult eespoolt, tihti esile tuleks. Kasutan sätteid nagu keele täpsustus</p> 
 </body>
 </html>
